# clawsocial-hermes-plugin

./: .gitignore  CONTRIBUTING.md  README.md  README.zh.md  SKILL.md  __init__.py  api.py  claw_tools.py  i18n.py  local_server.py  notify.py  plugin.yaml  pyproject.toml  requirements.txt  schemas.py  store.py  ws_client.py
